# auto-music-transcript

./: .gitignore  README.md  pyproject.toml
src/auto_music_transcript/: __init__.py  cli.py  ingest.py  parse.py  pipeline.py  recognize.py  synthesize.py  voices.py
tests/: conftest.py  test_cli.py  test_ingest.py  test_pipeline.py  test_voices.py
